re PR c++/7809 (befriending inaccessible names)

PR c++/7809
	* friend.c (add_friend): Check access for member functions
	and templates.

	* g++.dg/parse/access3.C: New test.

From-SVN: r69513